_sass/_base.scss
*,
*::before,
*::after {
  box-sizing: border-box;

  @media (prefers-reduced-motion: reduce) {
    // stylelint-disable declaration-no-important, plugin/no-unsupported-browser-features
    background-attachment: initial !important;
    transition-delay: 0s !important;
    transition-duration: 0s !important;
    animation-duration: 1ms !important;
    animation-delay: -1ms !important;
    animation-iteration-count: 1 !important;
    scroll-behavior: auto !important;
    // stylelint-enable
  }
}

html,
body {
  height: 100%;
}

html {
  background: var(--color-background-secondary);
  scroll-padding-top: 5rem;
}

body {
  margin: 0;
  color: var(--color-text-body);
  font-size: 112.5%; // 18px
  font-family: $font-body;
  line-height: 1.5;
  background-color: var(--color-background);
}

:any-link {
  position: relative;

  &:link,
  &:visited {
    color: var(--color-link);
    text-decoration: underline;
  }

  &:hover,
  &:focus {
    text-decoration: underline;
  }

  &:hover {
    color: var(--color-link-hover);
  }

  &:focus {
    @include focus-with-shadow;
  }

  // subtle, visible "click"
  &:active {
    bottom: -#{$border-thin};
  }
}

:target {
  @include focus-with-shadow;
}

h1,
%h1,
h2,
%h2,
h3,
%h3,
h4,
%h4,
h5,
%h5,
h6,
%h6 {
  margin-bottom: 1rem;
  color: var(--color-text-heading);
  font-weight: $font-weight-bold;
  font-family: $font-body;
  line-height: $line-height-heading;

  a:link,
  a:visited {
    text-decoration: none;
  }
}

h1,
%h1 {
  margin-top: 0;
  font-size: 2.25rem;
}

h2,
%h2 {
  margin-top: 2rem;
  font-size: 1.5rem;
}

h3,
%h3 {
  margin-top: 1.6rem;
  font-size: 1.25rem;
}

h4,
%h4 {
  margin-top: 1.5rem;
  margin-bottom: 0.5rem;
  font-size: 1rem;
}

h5,
%h5 {
  margin-top: 1rem;
  margin-bottom: 0.5rem;
  font-size: 1rem;
}

h6,
%h6 {
  margin-top: 1rem;
  margin-bottom: 0;
  font-size: 1rem;
}

%p,
p {
  max-width: $content-line-length;
  margin-top: 0.25rem;
  margin-bottom: 1rem;
  font-size: 1rem;
  line-height: $line-height-text;
}

ul {
  list-style-type: disc;
}

ul,
ol {
  margin: 0.25rem 0 0.75rem 2rem;
  padding: 0;

  ul,
  ol {
    margin-top: 0;
    margin-bottom: 0;
  }
}

p + ul,
p + ol {
  margin-top: 0;
  margin-bottom: 0.75rem;
}

li {
  font-size: 1rem;
  line-height: $line-height-text;
}

pre {
  margin-top: 0.25rem;
  margin-bottom: 0.5rem;
  padding: 0.5rem 0.75rem;
  white-space: pre-wrap;
  background-color: var(--color-background-tertiary);
  border-radius: 0.25rem;
}

code {
  padding: 0.15rem 0.25rem;
  background-color: var(--color-background-tertiary);
  border-radius: 0.25rem;
}

input,
select,
textarea {
  font-size: 1rem;
}

figure {
  margin: 0;
}

figcaption {
  table & {
    @extend %u-visually-hidden;
  }
}

hr {
  display: block;
  box-sizing: content-box;
  height: $border-thick;
  margin: 3rem 0;
  padding: 0;
  overflow: visible;
  border: 0;
  border-top: $border-thick solid var(--color-border);
}

img,
svg,
video,
canvas {
  max-width: 100%;
  height: auto;
  vertical-align: middle;
  border: 0;
}

kbd {
  display: inline-block;
  padding: 0 0.25rem;
  white-space: nowrap;
  background-color: var(--color-background-tertiary);
  border: $border-thin solid var(--color-border);
  border-radius: 0.25rem;
}

table {
  width: 100%;
  max-width: 100%;
  border-collapse: collapse;

  th,
  td {
    padding: 0.5rem 1rem;
    word-break: break-word;
    border: $border-thin solid var(--color-border);
  }

  th {
    text-align: left;
    background: var(--color-background-tertiary);
  }
}

